fix UI issues on small screens

--- a/app/webpacker/css/admin/pages/product_preview.scss
+++ b/app/webpacker/css/admin/pages/product_preview.scss
@@ -102,6 +102,10 @@
     width: 25%;
   }
 
+  .small-12 {
+    width: 100%;
+  }
+
   @media only screen and (min-width: 40.0625em) {
     .medium-3 {
       width: 20%; // original value 25%
